--- a/html/picture.html
+++ b/html/picture.html
@@ -17,14 +17,40 @@
     <div class="container">
         <div id="img_unit">
             <div class="photo">
-                <img src="/img/arm_wrestling_man.png">
                 <div class="inner">
-                    <p>コメント１<span>nickname</span></p>
                 </div>
             </div>
         </div>
-
     </div>
+
+    <script>
+        var ajax = new XMLHttpRequest();
+        ajax.open("GET", "https://h2o-space.com/htmlbook/images.php");
+        ajax.responseType = "json";
+        ajax.send(null);
+
+        ajax.onreadystatechange = function () {
+            if (ajax.readyState === XMLHttpRequest.DONE && ajax.status === 200) {
+                for (var i = 0; i < this.response.length; i++) {
+                    var data = this.response[i];
+                    
+                    var img = document.createElement("img");
+                    img.setAttribute("src", data.path);
+
+                    var caption = document.createElement("div");
+                    caption.className = "inner";
+                    caption.innerHTML = "<p>" + data.caption + "<span>" + data.name + "</span></p>";
+
+                    var div = document.createElement("div");
+                    div.className = "photo";
+                    div.appendChild(img);
+                    div.appendChild(caption);
+
+                    document.getElementById("img_unit").appendChild(div);
+                }
+            }
+        };
+    </script>
 </body>
 
 </html>
